--- a/graphics/index.html
+++ b/graphics/index.html
@@ -1,62 +1,62 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body background="background.png">
-    <div id="runner1box">
-        <div class="name-column" id="name1"></div>
-        <img class="icon-column" src="icon_resize.JPG">
-        <div class="left-column">ゲーム名</div><div class="right-column" id="game1"></div>
-        <div class="left-column">カテゴリ</div><div class="right-column" id="category1"></div>
-        <div class="left-column">目標タイム</div><div class="right-column" id="target1"></div>
-        <div class="left-column">持ち時間</div><div class="right-column" id="limit1"></div>
-        <div class="left-column" id="time1"></div>
-        <progress class="progress-column" id="progress1" value="100" max="100"></div>
-    </div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <script type="text/javascript" rel="script" src="script.js"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
+    </head>
+    <body background="background.png">
+        <div id="boxGroupA">
+            <div class="name-column" id="nameGroupA"></div>
+            <img class="icon-column" id="iconGroupA" src="icon_resize.JPG">
+            <div class="left-column">ゲーム名</div><div class="right-column" id="gameGroupA"></div>
+            <div class="left-column">カテゴリ</div><div class="right-column" id="categoryGroupA"></div>
+            <div class="left-column">目標タイム</div><div class="right-column" id="targetGroupA"></div>
+            <div class="left-column">持ち時間</div><div class="right-column" id="limitGroupA"></div>
+        </div>
 
-<script>
-    const name1 = document.getElementById("name1");
-    const name1Rep = nodecg.Replicant("name1");
-    name1Rep.on("change", newValue => {
-        name1.innerText = newValue;
-    });
-    const game1 = document.getElementById("game1");
-    const game1Rep = nodecg.Replicant("game1");
-    game1Rep.on("change", newValue => {
-        game1.innerText = newValue;
-    });
-    const category1 = document.getElementById("category1");
-    const category1Rep = nodecg.Replicant("category1");
-    category1Rep.on("change", newValue => {
-        category1.innerText = newValue;
-    });
-    const target1 = document.getElementById("target1");
-    const target1Rep = nodecg.Replicant("target1");
-    target1Rep.on("change", newValue => {
-        target1.innerText = newValue;
-    });
-    const limit1 = document.getElementById("limit1");
-    const limit1Rep = nodecg.Replicant("limit1");
-    limit1Rep.on("change", newValue => {
-        if (newValue != 0) {
-            limit1.innerText = newValue;
-        } else {
-            limit1.innerText = "Time up!";
-        }
-    });
-    const progress1 = document.getElementById("progress1");
-    const progress1Rep = nodecg.Replicant("progress1");
-    progress1Rep.on("change", newValue => {
-        progress1.value = newValue;
-    });
-    const time1 = document.getElementById("time1");
-    const time1Rep = nodecg.Replicant("time1");
-    time1Rep.on("change", newValue => {
-        time1.innerText = newValue;
-    });
-</script>
+        <div id="boxGroupB">
+            <div class="name-column" id="nameGroupB"></div>
+            <img class="icon-column" id="iconGroupB" src="icon_resize.JPG">
+            <div class="left-column">ゲーム名</div><div class="right-column" id="gameGroupB"></div>
+            <div class="left-column">カテゴリ</div><div class="right-column" id="categoryGroupB"></div>
+            <div class="left-column">目標タイム</div><div class="right-column" id="targetGroupB"></div>
+            <!-- <div class="left-column">持ち時間</div><div class="right-column" id="limitGroupB"></div> -->
+        </div>
+
+        <div id="boxGroupC">
+            <div class="name-column" id="nameGroupC"></div>
+            <img class="icon-column" id="iconGroupC" src="icon_resize.JPG">
+            <div class="left-column">ゲーム名</div><div class="right-column" id="gameGroupC"></div>
+            <div class="left-column">カテゴリ</div><div class="right-column" id="categoryGroupC"></div>
+            <div class="left-column">目標タイム</div><div class="right-column" id="targetGroupC"></div>
+            <!-- <div class="left-column">持ち時間</div><div class="right-column" id="limitGroupC"></div> -->
+        </div>
+
+        <div id="boxGroupD">
+            <div class="name-column" id="nameGroupD"></div>
+            <img class="icon-column" id="iconGroupD" src="icon_resize.JPG">
+            <div class="left-column">ゲーム名</div><div class="right-column" id="gameGroupD"></div>
+            <div class="left-column">カテゴリ</div><div class="right-column" id="categoryGroupD"></div>
+            <div class="left-column">目標タイム</div><div class="right-column" id="targetGroupD"></div>
+            <!-- <div class="left-column">持ち時間</div><div class="right-column" id="limitGroupD"></div> -->
+        </div>
+
+        <div class="progress1">
+            <div id="progress1" class="progress"></div>
+        </div>
+
+        <div class="progress2">
+            <div id="progress2" class="progress"></div>
+        </div>
+
+        <div class="progress3">
+            <div id="progress3" class="progress"></div>
+        </div>
+
+        <div class="progress4">
+            <div id="progress4" class="progress"></div>
+        </div>
+    </body>
 </html>
