--- a/dashboard/GroupC.html
+++ b/dashboard/GroupC.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <script type="text/javascript" rel="script" src="script.js"></script>
+        <link rel="stylesheet" type="text/css" href="dashboard_style.css">
+        <script type="text/javascript" rel="script" src="dashboard_script.js"></script>
     </head>
     <body>
         <p>      
@@ -18,6 +18,7 @@
             <div><span>目標タイム:</span><span id="targetText"></span></div>
             <div><span>持ち時間:</span><span id="limitText"></span></div>
             <div><span>残り時間:</span><span id="currentText"></span></div>
+            <div><img id="iconImage"></div>
         </p>
     </body>
 </html>
