--- a/dashboard/GroupC.html
+++ b/dashboard/GroupC.html
@@ -12,6 +12,7 @@
             <button id="nextButton" onclick="nextRunner();" disabled>次走者</button>
             <button id="startButton" onclick="timerStart();" disabled>スタート</button>
             <button id="stopButton" onclick="timerStop();" disabled>ストップ</button>
+            <button id="resetButton" onclick="timerReset();">リセット</button>
             <div><span>名前:</span><span id="nameText"></span></div>
             <div><span>ゲーム名:</span><span id="gameText"></span></div>
             <div><span>カテゴリ:</span><span id="categoryText"></span></div>
