--- a/graphics/GroupA_index.html
+++ b/graphics/GroupA_index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="top" class="row">
         <div id="sideBar">
-            <div id="boxGroupA" class="infoBox">
+            <div id="box1" class="infoBox">
                 <div class="row runnerInfo">
                     <div class="mirrorId">A</div>
                     <img class="icon" id="iconGroupA">
@@ -34,7 +34,7 @@
                 <span>Road to the Record</span>
                 <img src="/assets/rttr_layouts/materials/trophy.png">
             </div>
-            <div id="boxGroupB" class="infoBox">
+            <div id="box2" class="infoBox">
                 <div class="row runnerInfo">
                     <div class="mirrorId">B</div>
                     <img class="icon" id="iconGroupB">
@@ -53,7 +53,7 @@
                     <div class="value" id="targetGroupB"></div>
                 </div>
             </div>
-            <div id="boxGroupC" class="infoBox">
+            <div id="box3" class="infoBox">
                 <div class="row runnerInfo">
                     <div class="mirrorId">C</div>
                     <img class="icon" id="iconGroupC">
@@ -72,7 +72,7 @@
                     <div class="value" id="targetGroupC"></div>
                 </div>
             </div>
-            <div id="boxGroupD" class="infoBox">
+            <div id="box4" class="infoBox">
                 <div class="row runnerInfo">
                     <div class="mirrorId">D</div>
                     <img class="icon" id="iconGroupD">
