Fix progressbar logic

--- a/graphics/GroupA_index.html
+++ b/graphics/GroupA_index.html
@@ -95,7 +95,7 @@
         <div id="mainScreen">
             <div id="progress1" class="progress">
                 <div class="mirrorId"><span>A</span></div>
-                <div id="remaining1" class="remaining"></div>
+                <div id="progressGroupA" class="remaining"></div>
             </div>
             <div id="mainVideo" class="video"></div>
         </div>
@@ -105,21 +105,21 @@
             <div class="video sub"></div>
             <div id="progress2" class="progress">
                 <div class="mirrorId"><span>B</span></div>
-                <div id="remaining2" class="remaining"></div>
+                <div id="progressGroupB" class="remaining"></div>
             </div>
         </div>
         <div id="subScreen2" class="subScreen">
             <div class="video sub"></div>
             <div id="progress3" class="progress">
                 <div class="mirrorId"><span>C</span></div>
-                <div id="remaining3" class="remaining"></div>
+                <div id="progressGroupC" class="remaining"></div>
             </div>
         </div>
         <div id="subScreen3" class="subScreen">
             <div class="video sub"></div>
             <div id="progress4" class="progress">
                 <div class="mirrorId"><span>D</span></div>
-                <div id="remaining4" class="remaining"></div>
+                <div id="progressGroupD" class="remaining"></div>
             </div>
         </div>
     </div>
