--- a/dashboard/GroupD.html
+++ b/dashboard/GroupD.html
@@ -9,7 +9,7 @@
         <p>      
             <button id="reloadButton" onclick="reload();" disabled>更新</button>
             <button id="prevButton" onclick="prevRunner();" disabled>前走者</button>
-            <button id="nextButton" onclick="nextRunner();" disabled>次走者</button>
+            <button id="nextButton" onclick="nextRunner();">次走者</button>
             <button id="startButton" onclick="timerStart();" disabled>スタート</button>
             <button id="stopButton" onclick="timerStop();" disabled>ストップ</button>
             <button id="resetButton" onclick="timerReset();">リセット</button>
