--- a/dashboard/GroupA.html
+++ b/dashboard/GroupA.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <p>      
-            <button id="reloadButton" onclick="reload();" disabled>更新</button>
+            <button id="reloadButton" onclick="reload();">更新</button>
             <button id="prevButton" onclick="prevRunner();" disabled>前走者</button>
             <button id="nextButton" onclick="nextRunner();">次走者</button>
             <button id="startButton" onclick="timerStart();" disabled>スタート</button>
