add current time

--- a/graphics/GroupC_index.html
+++ b/graphics/GroupC_index.html
@@ -15,6 +15,7 @@
                     <div class="mirrorId">C</div>
                     <img class="icon" id="iconGroupC">
                     <span class="name" id="nameGroupC"></span>
+                    <span class="currentTime" id="currentTimeGroupC">00:00:00</span>
                 </div>
                 <div class="row">
                     <div class="label">ゲーム名</div>
@@ -39,6 +40,7 @@
                     <div class="mirrorId">A</div>
                     <img class="icon" id="iconGroupA">
                     <span class="name" id="nameGroupA"></span>
+                    <span class="currentTime" id="currentTimeGroupA">00:00:00</span>
                 </div>
                 <div class="row">
                     <div class="label">ゲーム名</div>
@@ -58,6 +60,7 @@
                     <div class="mirrorId">B</div>
                     <img class="icon" id="iconGroupB">
                     <span class="name" id="nameGroupB"></span>
+                    <span class="currentTime" id="currentTimeGroupB">00:00:00</span>
                 </div>
                 <div class="row">
                     <div class="label">ゲーム名</div>
@@ -77,6 +80,7 @@
                     <div class="mirrorId">D</div>
                     <img class="icon" id="iconGroupD">
                     <span class="name" id="nameGroupD"></span>
+                    <span class="currentTime" id="currentTimeGroupD">00:00:00</span>
                 </div>
                 <div class="row">
                     <div class="label">ゲーム名</div>
