--- a/graphics/GroupC_index.html
+++ b/graphics/GroupC_index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="graphics_style.css">
+    <link rel="stylesheet" type="text/css" href="graphics_style_common.css">
+    <link rel="stylesheet" type="text/css" href="graphics_style_c.css">
     <script type="text/javascript" rel="script" src="graphics_script.js"></script>
 </head>
 
