--- a/dashboard/GroupB.html
+++ b/dashboard/GroupB.html
@@ -19,8 +19,12 @@
             <div><span>名前:</span><span id="nameText"></span></div>
             <div><span>ゲーム名:</span><span id="gameText"></span></div>
             <div><span>カテゴリ:</span><span id="categoryText"></span></div>
+            <div><span>使用ハード:</span><span id="consoleText"></span></div>
+            <div><span>PBタイム:</span><span id="personalText"></span></div>
             <div><span>目標タイム:</span><span id="targetText"></span></div>
             <div><span>持ち時間:</span><span id="limitText"></span></div>
+            <div><span>Twitter:</span><span id="twitterText"></span></div>
+            <div><span>配信先:</span><span id="streamText"></span></div>
         </p>
     </body>
 </html>
