Change graphics for 3 runners

--- a/graphics/GroupA_index.html
+++ b/graphics/GroupA_index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <canvas id="mainBackGround"></canvas>
+    <canvas id="mainBackGround" width="1920" height="1080"></canvas>
     <div class="wrapper">
         <div id="sideBar">
             <div id="box1" class="infoBox">
