--- a/graphics/GroupA_index.html
+++ b/graphics/GroupA_index.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div id="title">
-                <img src="/assets/rttr_layouts/materials/C2.png">
+                <img src="material/logo_C2.png">
             </div>
             <div id="box2" class="infoBox">
                 <div class="row runnerInfo">
