Fix timer control

--- a/dashboard/setup.html
+++ b/dashboard/setup.html
@@ -6,6 +6,12 @@
     </head>
     <body>
         <div>
+            <div>動いないタイマーを一斉スタート</div>
+            <button id="startButton" onclick="timerStart();">スタート</button>
+        </div>
+        <br>
+        <div>
+            <div>セットアップ画面文言選択</div>
             <select id="textList" onchange="textChange()">
                 <option>Please wait...</option>
                 <option>Thankyou for watching!!</option>
