--- a/dashboard/setup.html
+++ b/dashboard/setup.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div>
-            <div>動いないタイマーを一斉スタート</div>
+            <div>動いていないタイマーを一斉スタート</div>
             <button id="startButton" onclick="timerStart();">スタート</button>
         </div>
         <br>
