--- a/dashboard/GroupB.html
+++ b/dashboard/GroupB.html
@@ -10,6 +10,7 @@
             <button id="resetButton" onclick="timerReset();">リセット</button>
             <button id="startButton" onclick="timerStart();" disabled>スタート</button>
             <button id="stopButton" onclick="timerStop();" disabled>ストップ</button>
+            <button id="successButton" onclick="timerSuccess();" disabled>記録達成</button>
             <div><span>残り時間:</span><span id="currentText"></span></div>
             <br>
             <button id="reloadButton" onclick="reload();">更新</button>
