Add runner setup window

--- a/dashboard/GroupA.html
+++ b/dashboard/GroupA.html
@@ -16,6 +16,8 @@
             <button id="reloadButton" onclick="reload();">更新</button>
             <button id="prevButton" onclick="prevRunner();" disabled>前走者</button>
             <button id="nextButton" onclick="nextRunner();">次走者</button>
+            <button id="setupButton" onclick="setupRunner();">準備中にする</button>
+            <button id="finishButton" onclick="finishRunner();">終了にする</button>
             <div><img id="iconImage"></div>
             <div><span>名前:</span><span id="nameText"></span></div>
             <div><span>ゲーム名:</span><span id="gameText"></span></div>
