--- a/graphics/GroupC_index.html
+++ b/graphics/GroupC_index.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div id="title">
-                <img src="materials/logo_C2.png">
+                <img src="material/logo_C2.png">
             </div>
             <div id="box2" class="infoBox">
                 <div class="row runnerInfo">
@@ -136,18 +136,24 @@
                     <div class="mirrorId"><span>C</span></div>
                     <div id="progressGroupC" class="remaining"></div>
                 </div>
-                <div id="mainVideo" class="video"></div>
+                <div id="screenGroupC" class="video">
+                    <div id="screenTextGroupC" class="screenText">Setup now...</div>
+                </div>
             </div>
             <div class="wrapper">
                 <div id="subScreen1" class="subScreen">
-                    <div class="video sub"></div>
+                    <div id="screenGroupA" class="video sub">
+                        <div id="screenTextGroupA" class="screenText">Setup now...</div>
+                    </div>
                     <div id="progress2" class="progress">
                         <div class="mirrorId"><span>A</span></div>
                         <div id="progressGroupA" class="remaining"></div>
                     </div>
                 </div>
                 <div id="subScreen2" class="subScreen">
-                    <div class="video sub"></div>
+                    <div id="screenGroupB" class="video sub">
+                        <div id="screenTextGroupB" class="screenText">Setup now...</div>
+                    </div>
                     <div id="progress3" class="progress">
                         <div class="mirrorId"><span>B</span></div>
                         <div id="progressGroupB" class="remaining"></div>
