--- a/graphics/setup.html
+++ b/graphics/setup.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <img src="material/background.png">
-        <div class="title"><span class="red">目標</span>が、<span class="red">強さ</span>をくれる。</div>
+        <img class="catch" src="material/catch.png">
         <img class="logo" src="material/logo_A1.png">
         <div class="border"></div>
         <div class="text" id="setupText"></div>
