Change thema color

--- a/graphics/GroupB_index.html
+++ b/graphics/GroupB_index.html
@@ -12,7 +12,7 @@
     <canvas id="mainBackGround" width="1920" height="1080"></canvas>
     <div class="wrapper">
         <div id="sideBar">
-            <div class="infoBox box1">
+            <div class="infoBox outline1">
                 <div class="row runnerInfo">
                     <div class="mirrorId">B</div>
                     <img class="icon" id="iconGroupB">
@@ -51,7 +51,7 @@
             <div id="title">
                 <img src="material/logo_C2.png">
             </div>
-            <div class="infoBox box2">
+            <div class="infoBox outline2">
                 <div class="row runnerInfo">
                     <div class="mirrorId">A</div>
                     <img class="icon" id="iconGroupA">
@@ -87,7 +87,7 @@
                     <div class="value" id="streamGroupA"></div>
                 </div>
             </div>
-            <div class="infoBox box3">
+            <div class="infoBox outline3">
                 <div class="row runnerInfo">
                     <div class="mirrorId">C</div>
                     <img class="icon" id="iconGroupC">
@@ -123,7 +123,7 @@
                     <div class="value" id="streamGroupC"></div>
                 </div>
             </div>
-            <div class="infoBox box4">
+            <div class="infoBox outline4">
                 <div class="row">
                     <div class="comment">実況・解説</div>
                 </div>
