Add commentator frame

--- a/dashboard/setup.html
+++ b/dashboard/setup.html
@@ -17,5 +17,46 @@
                 <option>Thankyou for watching!!</option>
             </select>
         </div>
+        <br>
+        <div>
+            <div>MC・解説枠</div>
+            <button id="reloadButton" onclick="reload();">スプレッドシート読み込み</button><br>
+            <button id="updateButton" onclick="update();">配信画面に反映</button>
+        </div>
+        <div>
+            <div>
+                <span>枠1</span>
+                <span id="comment0"></span>
+                <span id="commentName0"></span>
+            </div>
+        </div>
+        <div>
+            <div>
+                <span>枠2</span>
+                <span id="comment1"></span>
+                <span id="commentName1"></span>
+            </div>
+        </div>
+        <div>
+            <div>
+                <span>枠3</span>
+                <span id="comment2"></span>
+                <span id="commentName2"></span>
+            </div>
+        </div>
+        <div>
+            <div>
+                <span>枠4</span>
+                <span id="comment3"></span>
+                <span id="commentName3"></span>
+            </div>
+        </div>
+        <div>
+            <div>
+                <span>枠5</span>
+                <span id="comment4"></span>
+                <span id="commentName4"></span>
+            </div>
+        </div>
     </body>
 </html>
