--- a/graphics/GroupC_index.html
+++ b/graphics/GroupC_index.html
@@ -125,9 +125,30 @@
             </div>
             <div class="infoBox outline4">
                 <div class="row">
-                    <div class="comment">実況・解説</div>
+                    <div class="comment">MC・解説</div>
                 </div>
-                <br><br><br><br>
+                <div class="row marginTop">
+                    <div id="commentBox0" class="commentBox">
+                        <img id="iconComment0" class="commentIcon">
+                        <div id="nameComment0"></div>
+                    </div>
+                    <div id="commentBox1" class="commentBox">
+                        <img id="iconComment1" class="commentIcon">
+                        <div id="nameComment1"></div>
+                    </div>
+                    <div id="commentBox2" class="commentBox">
+                        <img id="iconComment2" class="commentIcon">
+                        <div id="nameComment2"></div>
+                    </div>
+                    <div id="commentBox3" class="commentBox">
+                        <img id="iconComment3" class="commentIcon">
+                        <div id="nameComment3"></div>
+                    </div>
+                    <div id="commentBox4" class="commentBox">
+                        <img id="iconComment4" class="commentIcon">
+                        <div id="nameComment4"></div>
+                    </div>
+                </div>
             </div>
         </div>
         <div>
