--- a/graphics/GroupC_index.html
+++ b/graphics/GroupC_index.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div id="title">
-                <img src="material/logo_C2.png">
+                <img src="material/logo_A1.png">
             </div>
             <div class="infoBox outline2">
                 <div class="row runnerInfo">
